@@ -1,19 +1,19 @@
 package org.amet;
 
+import netscape.javascript.JSObject;
 import org.amet.controllers.AmetController;
 import org.amet.models.Amet;
 import org.amet.repositories.amets.AmetRepositoryImpl;
 import org.amet.services.amet.AmetCsvManager;
 import org.amet.services.database.DataBaseManager;
+import org.json.JSONObject;
 
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 // Press Shift twice to open the Search Everywhere dialog and type `show whitespaces`,
@@ -38,24 +38,23 @@ public class Main {
         AmetController ametController = new AmetController(new AmetRepositoryImpl(DataBaseManager.getInstance()));
         List<Amet> mediciones = ametController.findAll();
 
+        System.out.println("¿Dónde se dio la temperatura máxima y mínima total en cada uno de los días?.");
+        Map<String, List<Amet>> separed_by_day= mediciones.stream()
+                .collect(Collectors.groupingBy(
+                        (a) -> a.getDia().toString(),
+                        Collectors.toList()
+                ));
 
-        //1
-//        Map<String, List<Amet>> separed_by_day= mediciones.stream()
-//                .collect(Collectors.groupingBy(
-//                        (a) -> a.getDia().toString(),
-//                        Collectors.toList()
-//                ));
-//
-//        separed_by_day.entrySet().stream()
-//                .map((value) -> value.getValue().stream().max(Comparator.comparingDouble(Amet::getTemp_max)))
-//                .toList().forEach((elem) -> System.out.println("El maximo del dia : " + elem.get().getDia() + " es " + elem.get().toString()));
-//
-//        separed_by_day.entrySet().stream()
-//                .map((value) -> value.getValue().stream().min(Comparator.comparingDouble(Amet::getTemp_min)))
-//                .toList().forEach((elem) -> System.out.println("El minimo del dia : " + elem.get().getDia() + " es " + elem.get().toString()));
+        separed_by_day.entrySet().stream()
+                .map((value) -> value.getValue().stream().max(Comparator.comparingDouble(Amet::getTemp_max)))
+                .toList().forEach((elem) -> System.out.println("El maximo del dia : " + elem.get().getDia() + " es " + elem.get().toString()));
 
+        separed_by_day.entrySet().stream()
+                .map((value) -> value.getValue().stream().min(Comparator.comparingDouble(Amet::getTemp_min)))
+                .toList().forEach((elem) -> System.out.println("El minimo del dia : " + elem.get().getDia() + " es " + elem.get().toString()));
+        System.out.println();
 
-        //2
+        System.out.println("Máxima temperatura agrupado por provincias y día.");
         var max_per_dayAndProvincia = mediciones.stream()
                 .collect(Collectors.groupingBy(
                         (a) -> a.getDia().toString(),
@@ -65,8 +64,9 @@ public class Main {
                         )
 
                 ));
+        System.out.println();
 
-        //3
+        System.out.println("Mínima temperatura agrupado por provincias y día.");
         var min_per_dayAndProvincia = mediciones.stream()
                 .collect(Collectors.groupingBy(
                         (a) -> a.getDia().toString(),
@@ -76,8 +76,9 @@ public class Main {
                         )
 
                 ));
+        System.out.println();
 
-        //4
+        System.out.println("Medía de temperatura agrupado por provincias y día.");
         var avg_per_dayAndProvincia = mediciones.stream()
                 .collect(Collectors.groupingBy(
                         (a) -> a.getDia().toString(),
@@ -87,18 +88,17 @@ public class Main {
                         )
 
                 ));
-//        System.out.println(avg_per_dayAndProvincia);
+        System.out.println();
 
-
-        //5
+        System.out.println("Precipitación máxima por días y dónde se dio");
         var precipitacion_max_perDay = mediciones.stream()
                 .collect(Collectors.groupingBy(
                         (a) -> a.getDia().toString(),
                         Collectors.maxBy(Comparator.comparingDouble(Amet::getPrecipitacion))
                 ));
-//        System.out.println(precipitacion_max_perDay);
+        System.out.println();
 
-        //6
+        System.out.println("Precipitación media por provincias y día.");
         var precipitacion_avg_perDay_Provincia = mediciones.stream()
                 .collect(Collectors.groupingBy(
                         (a) -> a.getDia().toString(),
@@ -107,12 +107,27 @@ public class Main {
                                 Collectors.averagingDouble(Amet::getPrecipitacion)
                         )
                 ));
-//        System.out.println(precipitacion_avg_perDay_Provincia);
-
-        //7
+        System.out.println();
 
 
-        //8
+        System.out.println("Lugares donde ha llovido agrupado por provincias y día.");
+        var lugarllovido_groupby_provincias_dia = mediciones.stream()
+                .collect(Collectors.groupingBy(
+                        Amet::getProvincia,
+                        Collectors.groupingBy(
+                                (x) -> x.getDia().toString(),
+                                Collectors.filtering((x) -> x.getPrecipitacion() > 0, Collectors.toList())
+                        )
+                ));
+        System.out.println();
+
+        System.out.println("Lugar donde más ha llovido.");
+        var lugar_donde_mas_llovido = mediciones.stream()
+                .max(Comparator.comparingDouble(Amet::getPrecipitacion));
+        System.out.println();
+
+
+        System.out.println("Datos de las provincia de Madrid (debe funcionar para cualquier provincia)");
         var groupingby_provincia = mediciones.stream()
                 .filter((x) -> x.getProvincia().equals("Madrid"))
                 .collect(Collectors.groupingBy(
@@ -120,39 +135,90 @@ public class Main {
                         Collectors.toList()
                 ));
 
-        var json_prueba = groupingby_provincia.entrySet().stream().map((x) -> {
-            String key = x.getKey();
-            var values = x.getValue();
+        System.out.println(groupingby_provincia);
+        var maximo_groupingby = groupingby_provincia.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .max(Comparator.comparingDouble(Amet::getTemp_max))
+                ));
 
-            List<Object> data = new ArrayList<>();
+        var minimo_groypinby = groupingby_provincia.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .min(Comparator.comparingDouble(Amet::getTemp_min))
+                ));
 
-            var max_temp = values.stream()
-                    .max(Comparator.comparingDouble(Amet::getTemp_max));
+        var media_max_temp = groupingby_provincia.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .collect(Collectors.averagingDouble(Amet::getTemp_max))
+                ));
 
-            var min_temp = values.stream()
-                    .max(Comparator.comparingDouble(Amet::getTemp_min));
+        var media_min_temp = groupingby_provincia.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .collect(Collectors.averagingDouble(Amet::getTemp_min))
+                ));
 
-            var media_max_temp = values.stream()
-                    .collect(Collectors.averagingDouble(Amet::getTemp_max));
+        var maximo_groupingby_precipitacion = groupingby_provincia.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .max(Comparator.comparingDouble(Amet::getPrecipitacion))
+                ));
+        System.out.println(maximo_groupingby_precipitacion);
 
-            var media_min_temp = values.stream()
-                    .collect(Collectors.averagingDouble(Amet::getTemp_min));
+        var media_precipitacion = groupingby_provincia.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .collect(Collectors.averagingDouble(Amet::getPrecipitacion))
+                ));
 
-            var precipitacion_max = values.stream()
-                    .max(Comparator.comparingDouble(Amet::getPrecipitacion));
 
-            var precipitacion_avg = values.stream()
-                    .collect(Collectors.averagingDouble(Amet::getPrecipitacion));
+        JSONObject json = new JSONObject();
+        json.put("provincia", "Madrid");
+        JSONObject json_max_temps = new JSONObject();
+        json_max_temps.put("temp_max", maximo_groupingby.values().stream()
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .max(Comparator.comparingDouble(Amet::getTemp_max)).get().getTemp_max());
+        json_max_temps.put("localidad",  maximo_groupingby.values().stream()
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .max(Comparator.comparingDouble(Amet::getTemp_max)).get().getLocalidad());
+        json.put("temperatura_maxima", json_max_temps);
 
-            data.add(max_temp);
-            data.add(min_temp);
-            data.add(media_max_temp);
-            data.add(media_min_temp);
-            data.add(precipitacion_max);
-            data.add(precipitacion_avg);
-            return data;
-        });
-        System.out.println(json_prueba.toList());
+        JSONObject json_min_temps = new JSONObject();
+        json_min_temps.put("temp_min", minimo_groypinby.values().stream()
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .max(Comparator.comparingDouble(Amet::getTemp_max)).get().getTemp_min());
+        json_min_temps.put("localidad",  minimo_groypinby.values().stream()
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .max(Comparator.comparingDouble(Amet::getTemp_max)).get().getLocalidad());
+        json.put("temperatura_minima", json_min_temps);
+        json.put("avg_temp_max", media_max_temp.values());
+        json.put("avg_temp_min", media_min_temp.values());
+
+        JSONObject json_precipitacion = new JSONObject();
+        json_precipitacion.put("max_precipitacion", maximo_groupingby_precipitacion.values().stream()
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .max(Comparator.comparingDouble(Amet::getTemp_max)).get().getPrecipitacion());
+        json_precipitacion.put("localidad", maximo_groupingby_precipitacion.values().stream()
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .max(Comparator.comparingDouble(Amet::getTemp_max)).get().getLocalidad());
+
+        json.put("precipitacion_estadisticas", json_precipitacion);
+        json.put("avg_precipitacion", media_precipitacion.values());
+        System.out.println(json.toString());
 
     }
 }
